--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,11 +2,11 @@
     <section id="wrapper">
         <header id="header">
         {% if site.aboutPage %}
-            <a href="{{ site.baseurl }}about">
-                <img id="avatar" class="2x" src="{{ site.baseurl }}assets/images/nadun.jpg"/>
+            <a href="{{ site.baseurl }}/about">
+                <img id="avatar" class="2x" src="{{ site.baseurl }}/assets/images/nadun.jpg"/>
             </a>
         {% else %}
-            <img id="avatar" class="2x" src="{{ site.baseurl }}assets/images/nadun.jpg"/>
+            <img id="avatar" class="2x" src="{{ site.baseurl }}/assets/images/nadun.jpg"/>
         {% endif %}
             <h1>{{ site.author }}</h1>
             <h2>{{ site.description }}</h2>
