--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{{ site.name }}{% if page.title %} - {{ page.title }}{% endif %}</title>
-  <link rel="shortcut icon" href="{{ site.baseurl }}assets/images/favicon.ico">
-  <link rel="alternate" type="application/rss+xml" title="Nadun's Blog" href="{{ site.baseurl }}feed.xml">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/highlight.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/style.css">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+  <link rel="alternate" type="application/rss+xml" title="Nadun's Blog" href="{{ site.baseurl }}/feed.xml">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/highlight.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
 </head>
 <body>
 
@@ -25,8 +25,8 @@
   </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="{{ site.baseurl }}assets/js/main.js"></script>
-  <script src="{{ site.baseurl }}assets/js/highlight.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/main.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/highlight.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
 
   <script>
