--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,16 +15,16 @@ archive: true
 
 <div class="PageNavigation">
     {% if page.previous.url %}
-    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+    <a class="prev" href="{{ site.baseurl }}{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
     {% endif %}
     {% if page.next.url %}
-    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+    <a class="next" href="{{ site.baseurl }}{{page.next.url}}">{{page.next.title}} &raquo;</a>
     {% endif %}
 </div>
 
 <footer id="post-meta" class="clearfix">
     <a href="http://twitter.com/{{ site.authorTwitter }}">
-        <img class="avatar" src="{{ site.baseurl }}assets/images/nadun.jpg">
+        <img class="avatar" src="{{ site.baseurl }}/assets/images/nadun.jpg">
         <div>
             <span class="dark">{{ site.author }}</span>
             <span>{{ site.description }}</span>
@@ -50,7 +50,7 @@ archive: true
     <h3>Read more</h3>
     {% for post in site.posts %}
     <li>
-        <a href="{{ site.baseurl }}{{ post.url | remove_first: '/' }}">{{ post.title }}<aside class="dates">{{ post.date | date:"%b %d" }}</aside></a>
+        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}<aside class="dates">{{ post.date | date:"%b %d" }}</aside></a>
     </li>
     {% endfor %}
 </ul>
