changes were done in SEO

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
                     </li>
                     {% endif %}
                 </ul>
-                <p style="padding-top:10px" class="small">© Copyright {{ site.time | date: '%Y' }} {{ site.author }}</p>
+                <p style="padding-top:15px" class="small">© Copyright {{ site.time | date: '%Y' }} <a href="http://nadunindunil.github.io">{{ site.author }}</a></p>
             </div>
         </div>
     </div>
