--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ archive: true
 </div>
 
 <footer id="post-meta" class="clearfix">
-    <a href="http://twitter.com/{{ site.authorTwitter }}">
+    <a href="https://github.com/{{ site.github_username }}">
         <img class="avatar" src="{{ site.baseurl }}/assets/images/nadun.jpg">
         <div>
             <span class="dark">{{ site.author }}</span>
