--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,14 @@
       <meta content="{{ site.description }}" property="og:description">
     {% endif %}
     {% if page.url %}
-      <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+      <meta content="{{ site.url }}/tech{{ page.url }}" property="og:url">
     {% endif %}
     {% if page.date %}
       <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-      <meta content="{{ site.url }}/about/" property="article:author">
+      <meta content="{{ site.url }}/tech/about/" property="article:author">
     {% endif %}
     {% if page.header-img %}
-      <meta content="{{ site.url }}/{{ page.header-img }}" property="og:image">
+      <meta content="{{ site.url }}/tech/{{ page.header-img }}" property="og:image">
     {% endif %}
     {% if page.categories %}
       {% for category in page.categories limit:1 %}
@@ -59,7 +59,7 @@
       <meta name="twitter:title" content="{{ site.title }}">
     {% endif %}
     {% if page.url %}
-      <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+      <meta name="twitter:url" content="{{ site.url }}/tech{{ page.url }}">
     {% endif %}
     {% if page.description %}
       <meta name="twitter:description" content="{{ page.description }}">
@@ -67,7 +67,7 @@
       <meta name="twitter:description" content="{{ site.description }}">
     {% endif %}
     {% if page.header-img %}
-      <meta name="twitter:image:src" content="{{ site.url }}/{{ page.header-img }}">
+      <meta name="twitter:image:src" content="{{ site.url }}/tech/{{ page.header-img }}">
     {% endif %}
 
   <title>{{ site.name }}{% if page.title %} - {{ page.title }}{% endif %}</title>
