--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,11 @@ archive: true
         <h2 class="headline">{{ page.date | date:"%B %-d, %Y" }}</h2>
     </header>
     <section id="post-body">
+        <div>
+           {% if page.header-img %}
+            <img width="600" src="{{site.baseurl}}/{{page.header-img}}" alt="{{page.title}}">
+            {% endif %}
+        </div>
         {{content}}
     </section>
 </article>
