--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ archive: true
 
 <footer id="post-meta" class="clearfix">
     <a href="https://github.com/{{ site.github_username }}">
-        <img class="avatar" src="{{ site.baseurl }}/assets/images/nadun.jpg">
+        <!-- <img class="avatar" src="{{ site.baseurl }}/assets/images/nadun.jpg"> -->
         <div>
             <span class="dark">{{ site.author }}</span>
             <span>{{ site.description }}</span>
