--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,74 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="author" content="Nadun Indunil">
-
-  {% seo %}
+  <meta name="author" content="Nadun Indunil"> {% seo %}
 
   <!-- facebook Open Graph Metadatas -->
-    <meta content="1677947475832478" property="fb:app_id">
-    <meta content="{{ site.name }}" property="og:site_name">
-    {% if page.title %}
-      <meta content="{{ page.title }}" property="og:title">
-    {% else %}
-      <meta content="{{ site.name }}" property="og:title">
-    {% endif %}
-    {% if page.title %}
-      <meta content="article" property="og:type">
-    {% else %}
-      <meta content="website" property="og:type">
-    {% endif %}
-    {% if page.description %}
-      <meta content="{{ page.description }}" property="og:description">
-    {% else %}
-      <meta content="{{ site.description }}" property="og:description">
-    {% endif %}
-    {% if page.url %}
-      <meta content="{{ site.url }}/tech{{ page.url }}" property="og:url">
-    {% endif %}
-    {% if page.date %}
-      <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-      <meta content="{{ site.url }}/tech/about/" property="article:author">
-    {% endif %}
-    {% if page.header-img %}
-      <meta content="{{ site.url }}/tech/{{ page.header-img }}" property="og:image">
-    {% endif %}
-    {% if page.categories %}
-      {% for category in page.categories limit:1 %}
-      <meta content="{{ category }}" property="article:section">
-      {% endfor %}
-    {% endif %}
-    {% if page.tags %}
-      {% for tag in page.tags %}
-      <meta content="{{ tag }}" property="article:tag">
-      {% endfor %}
-    {% endif %}
+  <meta content="1677947475832478" property="fb:app_id">
+  <meta content="{{ site.name }}" property="og:site_name"> {% if page.title %}
+  <meta content="{{ page.title }}" property="og:title"> {% else %}
+  <meta content="{{ site.name }}" property="og:title"> {% endif %} {% if page.title %}
+  <meta content="article" property="og:type"> {% else %}
+  <meta content="website" property="og:type"> {% endif %} {% if page.description %}
+  <meta content="{{ page.description }}" property="og:description"> {% else %}
+  <meta content="{{ site.description }}" property="og:description"> {% endif %} {% if page.url %}
+  <meta content="{{ site.url }}/tech{{ page.url }}" property="og:url"> {% endif %} {% if page.date %}
+  <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
+  <meta content="{{ site.url }}/tech/about/" property="article:author"> {% endif %} {% if page.header-img %}
+  <meta content="{{ site.url }}/tech/{{ page.header-img }}" property="og:image"> {% endif %} {% if page.categories %} {% for category in page.categories limit:1 %}
+  <meta content="{{ category }}" property="article:section"> {% endfor %} {% endif %} {% if page.tags %} {% for tag in page.tags %}
+  <meta content="{{ tag }}" property="article:tag"> {% endfor %} {% endif %}
 
 
-    <!-- Twitter cards metadatas -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@nadmatrix">
-    <meta name="twitter:creator" content="@nadmatrix">
-    {% if page.title %}
-      <meta name="twitter:title" content="{{ page.title }}">
-    {% else %}
-      <meta name="twitter:title" content="{{ site.title }}">
-    {% endif %}
-    {% if page.url %}
-      <meta name="twitter:url" content="{{ site.url }}/tech{{ page.url }}">
-    {% endif %}
-    {% if page.description %}
-      <meta name="twitter:description" content="{{ page.description }}">
-    {% else %}
-      <meta name="twitter:description" content="{{ site.description }}">
-    {% endif %}
-    {% if page.header-img %}
-      <meta name="twitter:image:src" content="{{ site.url }}/tech/{{ page.header-img }}">
-    {% endif %}
+  <!-- Twitter cards metadatas -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@nadmatrix">
+  <meta name="twitter:creator" content="@nadmatrix"> {% if page.title %}
+  <meta name="twitter:title" content="{{ page.title }}"> {% else %}
+  <meta name="twitter:title" content="{{ site.title }}"> {% endif %} {% if page.url %}
+  <meta name="twitter:url" content="{{ site.url }}/tech{{ page.url }}"> {% endif %} {% if page.description %}
+  <meta name="twitter:description" content="{{ page.description }}"> {% else %}
+  <meta name="twitter:description" content="{{ site.description }}"> {% endif %} {% if page.header-img %}
+  <meta name="twitter:image:src" content="{{ site.url }}/tech/{{ page.header-img }}"> {% endif %}
 
   <title>{{ site.name }}{% if page.title %} - {{ page.title }}{% endif %}</title>
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
@@ -77,14 +43,19 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-8993328941018535",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
+
 <body>
 
-  {% include navigation.html %}
-
-  {% if page.profile %}
-      {% include profile.html %}
-  {% endif %}
+  {% include navigation.html %} {% if page.profile %} {% include profile.html %} {% endif %}
 
   <section id="wrapper" class="{% if page.profile %}home{% endif %}">
     {{ content }}
@@ -96,13 +67,16 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', '{{ site.google_analytics }}', 'auto');
     ga('send', 'pageview');
   </script>
 </body>
+
 </html>
